[workspace]
members = [
	"choubun",
	"cp932",
	"bc7",
	"gospel",

	"decompress",
	"themelios-macros",
	"themelios-scena",
	"themelios-types",
	"themelios-archive",
	"themelios",

	"calmare",
	"calmare-cli",
	"factoria",
	"cradle",
	"cradle-cli",
]

[workspace.dependencies]
hamu = { git = "https://github.com/Kyuuhachi/hamu", features = ["beryl"] }

[profile.dev]
package.hamu.opt-level = 3
package.choubun.opt-level = 3
package.cp932.opt-level = 3
package.decompress.opt-level = 3
package.bc7.opt-level = 3

package.backtrace.opt-level = 3

package.themelios-macros.opt-level = 3
package.syn.opt-level = 3
package.quote.opt-level = 3
package.proc-macro2.opt-level = 3

package.png.opt-level = 3
package.miniz_oxide.opt-level = 3
package.adler.opt-level = 3

[profile.release]
debug = true
