[workspace]
members = [
	"cp932",
	"bc7",
	"bzip",

	"gospel",
	"gospel-dump",

	"themelios-macros",
	"themelios-common",
	"themelios-scena",
	"themelios-ani",
	"themelios-archive",
	"themelios",

	"calmare",
	"calmare-cli",
	"factoria",
	"cradle",
	"cradle-cli",
]

[profile.dev]
package.choubun.opt-level = 3
package.cp932.opt-level = 3
package.bzip.opt-level = 3
package.bc7.opt-level = 3

package.backtrace.opt-level = 3

# package.themelios-macros.opt-level = 3
package.syn.opt-level = 3
package.quote.opt-level = 3
package.proc-macro2.opt-level = 3

package.png.opt-level = 3
package.miniz_oxide.opt-level = 3
package.adler.opt-level = 3

[profile.release]
debug = true
