[package]
name = "calmare-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calmare"
path = "src/main.rs"

[dependencies]
calmare.path = "../calmare"
themelios.path = "../themelios"
clap = { version = "4.1", features = ["derive"] }
eyre = "0.6.8"
codespan-reporting = "0.11.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.45.0", features = ["Win32_System_Console"] }
