[package]
name = "calmare"
version = "0.1.0"
edition = "2021"

[dependencies]
themelios = { path = "../themelios" }
themelios-archive-prebuilt.path = "../themelios-archive-prebuilt"
total-float.path = "../total-float"
extend = "1.1.2"

unicode-xid = "0.2.4"

[dev-dependencies]
codespan-reporting = "0.11.1"
