[package]
name = "cradle-cli"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "cradle-ed6"
# path = "src/main.rs"
# doc = false

[[bin]]
name = "cradle-ed7"
path = "src/main_ed7.rs"
doc = false

[dependencies]
cradle.path = "../cradle"
clap = { version = "4.1", features = ["derive"] }
eyre = "0.6.8"
extend = "1.2.0"

image = { version = "0.24.5", default-features = false, features = ["png", "dds"] }
png = "0.17.7"
ddsfile = "0.5.1"
intel_tex_2 = "0.2.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.95"
csv = "1.1.6"
