[package]
name = "cradle"
version = "0.1.0"
edition = "2021"

[dependencies]
gospel.path = "../gospel"
hamu.workspace = true
decompress.path = "../decompress"
bc7.path = "../bc7"
thiserror = "1.0.0"
image = { version = "0.24.5", default-features = false }

[dev-dependencies]
image = { version = "0.24.5", default-features = false, features = ["png"] }
