[package]
name = "ed6"
version = "0.1.0"
edition = "2021"

[dependencies]
hamu = { path = "../hamu" }
mapr = "0.8.0"

snafu = "0.7.1"
bitmatch = "0.1.1" # for decompress algorithm 2
encoding_rs = "0.8.31"
num_enum = "0.5.7"

derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut", "display", "from", "into"] }

[dev-dependencies]
test-case = "2.2.1"
lazy_static = "1.4.0"
similar = "2.2.0"
