[package]
name = "factoria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
themelios-archive.path = "../themelios-archive"
clap = { version = "4.1", features = ["derive"] }
memmap2 = "0.5.10"
eyre = "0.6.8"
term_size = "0.3.2"
chrono = "0.4.23"
unicode-width = "0.1.10"
