[package]
name = "kaiseki"
version = "0.1.0"
edition = "2021"

[dependencies]
hamu = { path = "../hamu" }

anyhow = "1.0.56"
mapr = "0.8.0"
chrono = "0.4.19"
thiserror = "1.0.30"
bitmatch = "0.1.1"
int-enum = "0.4.0"
extend = "1.1.2"
itermore = "0.2.0"
encoding_rs = "0.8.31"
bitflags = "1.3.2"
strum = "0.24.0"
strum_macros = "0.24.0"
