[package]
name = "themelios-ani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gospel.path = "../gospel"
themelios-macros.path = "../themelios-macros"
themelios-common.path = "../themelios-common"
cp932.path = "../cp932"
strict_result = "1.1.0"

thiserror = "1.0.0"
num_enum = "0.5.7"
extend = "1.1.2"
