[package]
name = "themelios-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
hamu.workspace = true
cp932.path = "../cp932"
zstd = { version = "0.12.3", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = []
prebuilt = ["zstd", "lazy_static"]

[dev-dependencies]
zstd = "0.12.3"
