[package]
name = "themelios-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gospel.path = "../gospel"
cp932.path = "../cp932"
strict_result = "1.1.0"
thiserror = "1.0.46"
extend = "1.1.2"
glam = "0.24.0"
