[package]
name = "themelios-scena"
version = "0.1.0"
edition = "2021"

[dependencies]
hamu.workspace = true
themelios-macros = { path = "../themelios-macros" }
cp932 = { path = "../cp932" }
strict_result = "1.1.0"

thiserror = "1.0.0"
num_enum = "0.5.7"
extend = "1.1.2"
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut", "display", "from", "into"] }
