[package]
name = "themelios-tables"
version = "0.1.0"
edition = "2021"

[dependencies]
hamu.workspace = true
themelios-scena = { path = "../themelios-scena/" }
strict_result = "1.1.0"
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut", "display", "from", "into"] }

thiserror = "1.0.0"
num_enum = "0.5.7"
enumflags2 = { version = "0.7.5", features = ["std"] }
