[package]
name = "themelios"
version = "0.1.0"
edition = "2021"

[dependencies]
gospel.path = "../gospel"
themelios-common.path = "../themelios-common"
themelios-scena.path = "../themelios-scena"
themelios-archive.path = "../themelios-archive"
strict_result = "1.1.0"
thiserror = "1.0.0"
num_enum = "0.5.7"
extend = "1.1.2"
glam = "0.24.0"

zstd = { version = "0.12.3", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["indexes"]
indexes = ["zstd", "lazy_static"]

[dev-dependencies]
zstd = "0.12.3"
