[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
ed6 = { path = "../ed6" }
snafu = { version = "0.7.1", features = ["backtraces-impl-backtrace-crate"] }
clap = { version = "3.1.15", features = ["derive"] }
indicatif = "0.17.0"
similar = "2.2.0"

filetime = "0.2.16"
chrono = "0.4.22"

[[bin]]
name = "ed6"
path = "src/main.rs"
