[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
themelios = { path = "../themelios" }
eyre = "0.6.8"
color-eyre = { version = "0.6.2", default-features = false }
clap = { version = "3.1.15", features = ["derive"] }
indicatif = "0.17.0"
similar = "2.2.0"

filetime = "0.2.16"
chrono = "0.4.22"

[[bin]]
name = "themelios-tools"
path = "src/main.rs"
